--- a/cssdemo/index.html
+++ b/cssdemo/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Demo</title>
+    <link rel="stylesheet" href="css/style.css">
     <style>
         h1,
         h2 {
@@ -39,29 +40,35 @@
             width: 50%;
         }
 
+
     </style>
 </head>
 <body>
-    
-    <h1>Today we will learn about adding style with css</h1>
-    <h2>This is how we add style with inline css</h2>
-    <p>This paragraph has no style</p>
-    <p style="color:seagreen;">This is a seagreen paragraph</p>
-    <p style="color:rgb(235, 11, 223); font-size: 50px;">This is rgb(235,11,223) with font size 50px</p>
-    <p style="color:red; font-size: 24px; text-align: center; background-color: coral;">This is a red, fontsize 24px, centered, with coral background</p>
+    <div class = "container">
+        <ul class="nav">
+            <li><a class = "active-navpage" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <h1>Today we will learn about adding style with css</h1>
+        <h2>This is how we add style with inline css</h2>
+        <p>This paragraph has no style</p>
+        <p style="color:seagreen;">This is a seagreen paragraph</p>
+        <p style="color:rgb(235, 11, 223); font-size: 50px;">This is rgb(235,11,223) with font size 50px</p>
+        <p style="color:red; font-size: 24px; text-align: center; background-color: coral;">This is a red, fontsize 24px, centered, with coral background</p>
 
-    <h2>This is how we add style with internal css, id selectors</h2>
-    <p id="blue-text">I want this text to be blue</p>
-    <p id="red-text">This one should be red</p>
-    <p id="multi-text">This one should be green, 24px, and right aligned</p>
+        <h2>This is how we add style with internal css, id selectors</h2>
+        <p id="blue-text">I want this text to be blue</p>
+        <p id="red-text">This one should be red</p>
+        <p id="multi-text">This one should be green, 24px, and right aligned</p>
 
-    <h2>let's do this with class selectors now</h2>
-    <p class="big-text">I want this one really big</p>
-    <p class="big-text right-aligned">I want this one really big and right aligned</p>
+        <h2>let's do this with class selectors now</h2>
+        <p class="big-text">I want this one really big</p>
+        <p class="big-text right-aligned">I want this one really big and right aligned</p>
 
 
-    <h2>This is how you center an image</h2>
-    <img src="" alt="" class="centered">
-    
+        <h2>This is how you center an image</h2>
+        <img src="" alt="" class="centered">
+    </div>
 </body>
 </html>
