--- a/my-genius/index.html
+++ b/my-genius/index.html
@@ -32,7 +32,7 @@
         <p>ENCAUSTIC: A painting technique in which the pigment is mixed with melted wax and resin and then applied to a surface while hot.</p>
         <p>IMPASTO: A thick application of paint to canvas or other support to emphasize texture and three-dimentionality of the paint rather than a smooth flat surface.</p>
         
-        <h2>Scupture</h2>
+        <h2>Sculpture</h2>
         <p>BAS RELIEF: Sculpture in which figures project only slightly from a background, as on a coin. (Also known as low relief sculpture.)</p>
         <p>CONTRAPPOSTO: A method of portraying the human figure by placing the weight on one foot and turning the shoulder so the figure appears relaxed and mobile.</p>
         
