add my-genius project

--- a/my-genius/contact.html
+++ b/my-genius/contact.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>    
 
+    </style>
 </head>
 <body>
     <div class = "container">
@@ -18,6 +20,10 @@
         </ul>
 
         <h1>My Contact</h1>
+
+        <p>Email:</p>
+        <a href="eyang@eastsideprep.org">eyang@eastsideprep.org</a>
+
     </div>
 </body>
 </html>
