--- a/my-genius/resource.html
+++ b/my-genius/resource.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources</title>
     <link rel="stylesheet" href="css/style.css">
-
+    
 </head>
 <body>
     <div class = "container">
@@ -18,6 +18,15 @@
         </ul>
 
         <h1>Resources</h1>
+        
+        <ul><a href="https://www.moma.org/collection/terms/" target="_blank" id="purple-color">Art Terms by the Museum of Modern Art</a></ul>
+        <ul><a href="https://www.artistsnetwork.com/art-history/art-history-glossary/" target="_blank" id="purple-color">Art History Glossary by ArtistsNetwork</a></ul>
+        <ul><a href="https://www.tate.org.uk/art/art-terms" target="_blank" id="purple-color">Art Terms by the TATE Britain Exhibition</a></ul>
+
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/iBZqOGv0he8?si=15gVgqbu5WoASscA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        <img src="images/painticon1.jpeg" style="width:30%">
     </div>
 </body>
 </html>
