--- a/my-genius/contact.html
+++ b/my-genius/contact.html
@@ -22,7 +22,8 @@
         <h1>My Contact</h1>
 
         <p>Email:</p>
-        <a href="eyang@eastsideprep.org">eyang@eastsideprep.org</a>
+        <a href="mailto:eyang@eastsideprep.org?Subject=Contact">eyang@eastsideprep.org</a>
+        <img src="images/mail.jpeg" style="width:20%">
 
     </div>
 </body>
