--- a/my-genius/gallery.html
+++ b/my-genius/gallery.html
@@ -19,34 +19,34 @@
 
         <h1>Image Gallery</h1>
 
-        <p>Here are some examples of artwork that demonstrate the terms described and explained on the home page. Each artwork serves as a visual journey into the world of artistic expression, inviting viewers to delve deeper into the incredible world of these creative principles.</p>
+        <p>Here are some examples of artwork that demonstrate the terms described and explained on the home page.</p> 
+        <p>Each artwork serves as a visual journey into the world of artistic expression, inviting viewers to delve deeper into the incredible world of these creative principles.</p>
 
         <div class="img-container">
             <div class="img-wrapper">
-                <img src="images/chiaroscuro.jpeg" alt="Image 1">
+                <img src="images/chiaroscuro.jpeg">
                 <div class="caption">Chiaroscuro demonstated by Sacred and Profane Love, 1602–1603</div>
             </div>
             <div class="img-wrapper">
-                <img src="images/encaustic.jpeg" alt="Image 2">
+                <img src="images/encaustic.jpeg">
                 <div class="caption">Encaustic demonstated by 6th-century encaustic icon from Saint Catherine's Monastery</div>
             </div>
             <div class="img-wrapper">
-                <img src="images/impasto.jpeg" alt="Image 3">
+                <img src="images/impasto.jpeg">
                 <div class="caption">Impasto demonstated by Vase with Pink Roses Still Life</div>
             </div>
         </div>
 
         <div class="img-container">
             <div class="img-wrapper">
-                <img src="images/basrelief.jpeg" alt="Image 1">
+                <img src="images/basrelief.jpeg">
                 <div class="caption">Bas relief demonstated by Scene from Assyrian Lion Hunt of Ashurbanipal</div>
             </div>
             <div class="img-wrapper">
-                <img src="images/contrapposto.jpeg" alt="Image 2">
+                <img src="images/contrapposto.jpeg">
                 <div class="caption">Contrapposto demonstated by Winged Victory of Samothrace</div>
             </div>
         </div>
-
     </div>
 
 
