--- a/my-genius/index.html
+++ b/my-genius/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="quick explantion on some art terms painting art sculpture">
+    <meta name="description" content="quick explantion on some art terms painting art sculpture chiaroscuro encaustic impasto basrelief contrapposto">
     <title>Art Terminology</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -32,13 +32,13 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <h1>Art Terminology</h1>
-        <h2>Oil Painting</h2>
+        <h2 style="color: rgb(105, 39, 83);">Oil Painting</h2>
         <img src="images/oilpaint.jpeg" style="width:20%">
         <p>CHIAROSCURO: the rendering of forms through a balanced contrast between light and dark areas.  The technique that was introduced during the Renaissance and is effective in creating an illusion of depth and space around the principal figures in a composition. Some notable exmaples of painters who used this technique include Leonardo Da Vinci and Rembrandt.</p>
         <p>ENCAUSTIC: A painting technique in which the pigment is mixed with melted wax and resin and then applied to a surface while hot.</p>
         <p>IMPASTO: A thick application of paint to canvas or other support to emphasize texture and three-dimentionality of the paint rather than a smooth flat surface.</p>
         
-        <h2>Sculpture</h2>
+        <h2 style="color: rgb(54, 51, 119);">Sculpture</h2>
         <img src="images/sculpture.jpeg" style="width:20%">
         <p>BAS RELIEF: Sculpture in which figures project only slightly from a background, as on a coin. (Also known as low relief sculpture.)</p>
         <p>CONTRAPPOSTO: A method of portraying the human figure by placing the weight on one foot and turning the shoulder so the figure appears relaxed and mobile.</p>
