--- a/my-genius/resource.html
+++ b/my-genius/resource.html
@@ -18,10 +18,11 @@
         </ul>
 
         <h1>Resources</h1>
+        <p>Below are some additional useful resources where you can learn about more art terms.</p>
         
-        <ul><a href="https://www.moma.org/collection/terms/" target="_blank" id="purple-color">Art Terms by the Museum of Modern Art</a></ul>
-        <ul><a href="https://www.artistsnetwork.com/art-history/art-history-glossary/" target="_blank" id="purple-color">Art History Glossary by ArtistsNetwork</a></ul>
-        <ul><a href="https://www.tate.org.uk/art/art-terms" target="_blank" id="purple-color">Art Terms by the TATE Britain Exhibition</a></ul>
+        <ul><a href="https://www.moma.org/collection/terms/" target="_blank">Art Terms by the Museum of Modern Art</a></ul>
+        <ul><a href="https://www.artistsnetwork.com/art-history/art-history-glossary/" target="_blank">Art History Glossary by ArtistsNetwork</a></ul>
+        <ul><a href="https://www.tate.org.uk/art/art-terms" target="_blank">Art Terms by the Tate Britain Exhibition</a></ul>
 
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/iBZqOGv0he8?si=15gVgqbu5WoASscA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
