--- a/cssgrid-demo/index.html
+++ b/cssgrid-demo/index.html
@@ -28,5 +28,9 @@
         <div class="grid-item main2">Main 2 content</div>
         <div class="grid-item side-nav">Side Nav</div>
     </div>
+
+    <div class="footer">
+        <p>Made by Emmy</p>
+    </div>
 </body>
 </html>
