--- a/js-messaround/index.html
+++ b/js-messaround/index.html
@@ -26,7 +26,7 @@
 
     <p id="lie"></p>
     
-    <button onclick="document.getElementById('lie').innerHTML='The third statement is the lie!'">Reveal!</button>
+    <button onclick="document.getElementById('lie').innerHTML='The first statement is the lie!'">Reveal!</button>
 
 
 
