--- a/site-redesign/index.html
+++ b/site-redesign/index.html
@@ -97,16 +97,8 @@
 
         <nav style="background-color: #E25F70;" class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <!-- left-aligned -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="">1</a>
-                    </li>
-
-                    </li>
-                </ul>
                 <!-- logo -->
-                <a style="padding-left: 13%" class="navbar-brand centered" href="index.html">
+                <a style="padding-left: 23%" class="navbar-brand centered" href="index.html">
                     <img src="images/logo.png" alt="">
                     <img src="images/textlogo.png" alt="Logo" style="width: 300px;">
                 </a>
@@ -114,8 +106,10 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="catalog.html">Catalog</a></li>
                         <li class="nav-item"><a class="nav-link" href="policy-FAQ.html">Policy/FAQ</a></li>
                         <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 </ul>
             </div>
         </nav>
@@ -151,7 +145,7 @@
                     <h2>SHOP BY CATEGORY</h2>
                 </div>
                 <div class="col-md-4">
-                    <a class="category-square-button" href="https://redmothjewelry.com/collections">See Catalog</a>
+                    <a class="category-square-button" href="catalog.html">See Catalog</a>
                 </div>
             </div>
             <div class="row mt-4">
