--- a/site-redesign/testimonials.html
+++ b/site-redesign/testimonials.html
@@ -25,14 +25,14 @@
         }
 
         .chunk-border {
-            border: 5px solid #44384A;
+            border: 5px solid #fad5ad;
             padding: 20px;
-            background-color: #ffffff;
+            background-color: #44384A;
         }
 
         p,h1,h2,h3,h4 {
 
-            color: #44384A;
+            color: #fad5ad;
         }
 
 
@@ -77,16 +77,9 @@
 
         <nav style="background-color: #E25F70;" class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <!-- left-aligned -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="">1</a>
-                    </li>
 
-                    </li>
-                </ul>
                 <!-- logo -->
-                <a style="padding-left: 13%" class="navbar-brand centered" href="index.html">
+                <a style="padding-left: 23%" class="navbar-brand centered" href="index.html">
                     <img src="images/logo.png" alt="">
                     <img src="images/textlogo.png" alt="Logo" style="width: 300px;">
                 </a>
@@ -94,8 +87,10 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="catalog.html">Catalog</a></li>
                         <li class="nav-item"><a class="nav-link" href="policy-FAQ.html">Policy/FAQ</a></li>
                         <li class="nav-item"><a class="nav-link active" href="testimonials.html">Testimonials</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 </ul>
             </div>
         </nav>
