--- a/site-redesign/catalog.html
+++ b/site-redesign/catalog.html
@@ -7,18 +7,11 @@
     <title>About Red Moth Jewelry</title>
 
     <link rel="stylesheet" href="https://use.typekit.net/wnd1ygn.css">
-
-    <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!--my external css file that overrides bootstrap-->
     <link rel="stylesheet" href="css/style.css">
 
     <style>
-        /* Center the logo */
         .navbar-brand {
             margin: 0 auto;
             display: table;
@@ -40,8 +33,8 @@
             position: relative;
             margin: 15px;
             overflow: hidden;
-            width: 180px; /* Set the desired width */
-            height: 180px; /* Set the desired height to make it square */
+            width: 180px; 
+            height: 180px;
 
         }
 
@@ -82,7 +75,7 @@
         }
     </style>
 
-<!-- 816869 -->
+
 </head>
 <body style="background-color: #44384A;" class="text-white">
     <div class="container-fluid">
@@ -90,12 +83,10 @@
 
         <nav style="background-color: #E25F70;" class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <!-- logo -->
                 <a style="padding-left: 23%" class="navbar-brand centered" href="index.html">
                     <img src="images/logo.png" alt="">
                     <img src="images/textlogo.png" alt="Logo" style="width: 300px;">
                 </a>
-                <!-- right-aligned -->
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -188,17 +179,7 @@
                 </div>
                 <div class="col-md-1"></div>
             </div>
-        </div>
         </div>  
-
-
-            
-
-
-
-
-
-
     </div>
 
     <script src="js/site.js"></script>
