--- a/site-redesign/about.html
+++ b/site-redesign/about.html
@@ -30,7 +30,7 @@
             padding-right: 50px;
         }
 
-        .testimonialimg{
+        .siteimg{
             border: 6px solid #735e7e;
         }
         
@@ -72,12 +72,12 @@
                     <p>Red Moth Jewelry is a small business that provides unique, handmade jewelry out of precious metals and semi-precious gemstones. Each piece is designed and crafted by hand, all by a single person. Red Moth Jewelry strives to provide size-inclusive, one-of-a-kind statement jewelry inspired by folklore and story-telling. Each piece is fabricated with love and intention, and aims to provide a little extra magic to the person that wears it.</p>
                 </div>
                 <div class="col-md-5" style="padding-right: 55px;">
-                    <img class="testimonialimg" style="width: 100%;" src="images/aboutpage1.webp" alt="">
+                    <img class="siteimg" style="width: 100%;" src="images/aboutpage1.webp" alt="jewelry">
                 </div>
             </div>
             <div class="row" style="padding: 50px;">
                 <div class="col-md-5" style="padding-left: 55px;">
-                    <img class="testimonialimg" style="width: 100%;" src="images/aboutpage2.webp" alt="">
+                    <img class="siteimg" style="width: 100%;" src="images/aboutpage2.webp" alt="artist">
                 </div>
                 <div class="col-md-7">
                     <h3 class="red">THE FACE BEHIND RED MOTH:</h3>
@@ -89,6 +89,6 @@
     </div>
 
     <script src="js/site.js"></script>
-    
+
 </body>
 </html>
