--- a/site-redesign/index.html
+++ b/site-redesign/index.html
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-md-8">
                     <a href="https://redmothjewelry.com/collections/clearance">
-                        <img src="images/clearance.jpg" alt="Product 4" class="img-thumbnail float-right">
+                        <img src="images/clearance.jpg" alt="clearance" class="img-thumbnail float-right">
                     </a>
                 </div>
             </div> 
